added oidc login button

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,8 @@
     />
     <script type="text/javascript">
       var apiUrlPrefix = '<%= htmlWebpackPlugin.options.apiUrlPrefix %>';
+      var oidcAuthority = '<%= htmlWebpackPlugin.options.oidcAuthority %>';
+      var oidcClientId = '<%=htmlWebpackPlugin.options.oidcClientId %>';
     </script>
   </head>
   <body>
