define global var same way as webpack

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script type="text/javascript">
+      var apiUrlPrefix = '<%- apiUrlPrefix %>';
+      var oidcAuthority = '<%- oidcAuthority %>';
+      var oidcClientId = '<%- oidcClientId %>';
+    </script>
   </head>
 
   <body>
